[![🖕 Pippis Action](https://github.com/pippianders/pippianders/actions/workflows/main.yml/badge.svg)](https://github.com/pippianders/pippianders/actions/workflows/main.yml)
[![🖕 Pippis Action](https://github.com/pippianders/pippianders/actions/workflows/main.yml/badge.svg)](https://github.com/pippianders/pippianders/actions/workflows/main.yml)

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+[![🖕 Pippis Action](https://github.com/pippianders/pippianders/actions/workflows/main.yml/badge.svg)](https://github.com/pippianders/pippianders/actions/workflows/main.yml)
 - 👽 Hi, I’m @pippianders
 - 🙃 I’m interested in ...
 - 🖕 I’m currently learning ...
